[chg] added new test cases

--- a/config/log4j2.properties
+++ b/config/log4j2.properties
@@ -25,7 +25,7 @@ property.file_split_size = 100MB
 property.file_count = 100
 property.file_ttl = 7d
 
-rootLogger.level = INFO
+rootLogger.level = INFO, ERROR
 
 ############################ log output to console #############################
 rootLogger.appenderRef.consoleStdout.ref = consoleStdoutAppender
