--- a/JOBS/mysql_mysql/inventory.myorders__DWH.yaml
+++ b/JOBS/mysql_mysql/inventory.myorders__DWH.yaml
@@ -19,12 +19,12 @@ source {
 }
 sink {
     jdbc {
-        url = "jdbc:mysql://db01:3306/DWH_Seatunnel?useUnicode=true&characterEncoding=UTF-8&rewriteBatchedStatements=true"
+        url = "jdbc:mysql://db01:3307/DWH_SEATUNNEL_LARRY?useUnicode=true&characterEncoding=UTF-8&rewriteBatchedStatements=true"
         driver = "com.mysql.cj.jdbc.Driver"
         user = "seatunnel_sink"
         password = "Abcd1234"
         generate_sink_sql = true
-        database = DWH_Seatunnel
+        database = DWH_SEATUNNEL_LARRY
         table = my_orders
         primary_keys = ["id"]
         field_ide = ORIGINAL
