[chg] added stress test cases

--- a/JOBS/mysql_mysql/inventory.myorders__DWH.conf
+++ b/JOBS/mysql_mysql/inventory.myorders__DWH.conf
@@ -7,24 +7,24 @@ env {
 source {
   MySQL-CDC {
     server-id = 5652-5657
-    base-url = "jdbc:mysql://db01:3306/inventory"
+    base-url = "jdbc:mysql://192.168.138.16:3306/inventory"
     username = "seatunnel_src"
     password = "Abcd1234"
     table-names = ["inventory.my_orders"]
     
-    startup.mode = "initial"
+    startup.mode = "latest"
     schema-changes.enabled = true
 
   }
 }
 sink {
     jdbc {
-        url = "jdbc:mysql://db01:3307/DWH_SEATUNNEL_LARRY?useUnicode=true&characterEncoding=UTF-8&rewriteBatchedStatements=true"
+        url = "jdbc:mysql://192.168.138.16:3306/dw_ingest_seatunnel02?useUnicode=true&characterEncoding=UTF-8&rewriteBatchedStatements=true"
         driver = "com.mysql.cj.jdbc.Driver"
         user = "seatunnel_sink"
         password = "Abcd1234"
         generate_sink_sql = true
-        database = DWH_SEATUNNEL_LARRY
+        database = dw_ingest_seatunnel02
         table = my_orders
         primary_keys = ["id"]
         field_ide = ORIGINAL
