[chg] added stress test cases

--- a/JOBS/kafka_mysql/ST_mysql2kfk_orders_01_src.conf
+++ b/JOBS/kafka_mysql/ST_mysql2kfk_orders_01_src.conf
@@ -1,4 +1,5 @@
 env {
+  job.name = "ST_mysql2kfk_orders_01_src"
   parallelism = 1
   job.mode = "STREAMING"
   checkpoint.interval = 10000
@@ -25,15 +26,17 @@ source {
 
 sink {
   kafka {
-      topic = "mysql_my_orders_seatunnel"
+      topic = "ST_mysql2kfk_orders_01"
       bootstrap.servers = "broker:29092"
       format = compatible_debezium_json
       kafka.request.timeout.ms = 60000
       semantics = EXACTLY_ONCE
       kafka.config = {
         acks = "all"
-        request.timeout.ms = 60000
+        request.timeout.ms = 30000
         buffer.memory = 33554432
+        compression.type = lz4
+        batch.size = 500
       }
   }
 }
