--- a/JOBS/stress_test/ST_pipeline_00_src.conf
+++ b/JOBS/stress_test/ST_pipeline_00_src.conf
@@ -1,39 +1,44 @@
+
 env {
+  job.name = "ST_pipeline_00_src"
   parallelism = 1
   job.mode = "STREAMING"
   checkpoint.interval = 10000
+  logging.level = "DEBUG"
 }
 
 source {
   MySQL-CDC {
-    base-url = "jdbc:mysql://db01.kaskade.local:3306/inventory"
+    base-url = "jdbc:mysql://db01.kaskade.local:3306/inventory01"
     username = "seatunnel_src"
     password = "Abcd1234"
-    startup.mode=INITIAL
+    startup.mode="initial"
     format = compatible_debezium_json
-
-    table-names = ["inventory.my_orders"]
+    table-names = ["inventory01.orders","inventory02.orders"]
+    plugin_output = "src_table"
     debezium = {
         # include schema into kafka message
         key.converter.schemas.enable = false
         value.converter.schemas.enable = false
         # topic prefix
-        database.server.name =  "db01.kaskade.local"
+        database.server.name = "db01.kaskade.local"
     }
   }
 }
 
 sink {
   kafka {
-      topic = "mysql_my_orders_seatunnel"
+      topic = "ST_pipeline_00_src"
       bootstrap.servers = "broker:29092"
       format = compatible_debezium_json
       kafka.request.timeout.ms = 60000
       semantics = EXACTLY_ONCE
       kafka.config = {
         acks = "all"
-        request.timeout.ms = 60000
+        request.timeout.ms = 30000
         buffer.memory = 33554432
+        compression.type = lz4
+        batch.size = 500
       }
   }
 }
