--- a/docker-compose.1m2w.yaml
+++ b/docker-compose.1m2w.yaml
@@ -1,16 +1,16 @@
 
 
 services:
-  master:
-    # image: apache/seatunnel:2.3.9
-    build:
-      context: .
-      dockerfile: ./Dockerfile-seatunnel-kas
-    hostname: seatunnel-master
-    container_name: seatunnel-master
+  master1:
+    image: quay.io/larryloi/seatunnel-2.3.10-kas:latest
+    #build:
+    #  context: .
+    #  dockerfile: ./Dockerfile-seatunnel-kas
+    hostname: seatunnel-master1
+    container_name: seatunnel-master1
     environment:
       - TZ=Asia/Macau
-      - ST_DOCKER_MEMBER_LIST=172.199.0.11,172.199.0.12,172.199.0.13
+      - ST_DOCKER_MEMBER_LIST=172.199.0.50,172.199.0.51,172.199.0.52
       # - JAVA_CLASSPATH=/opt/seatunnel/lib:/opt/seatunnel/starter
         #- IJAVA_CLASSPATH=/opt/seatunnel/lib
       #- JAVA_CLASSPATH=/opt/seatunnel/lib
@@ -26,22 +26,19 @@ services:
         #- ../st_src/shared-connectors:/shared-connectors
       - ./JOBS:/opt/seatunnel/JOBS
       - ./Makefile.ct:/opt/seatunnel/Makefile
-      # - ../st_src/starter:/opt/seatunnel/starter
-      # - ./job_run.sh:/opt/seatunnel/job_run.sh
+      - seatunnel_master1_data:/opt/seatunnel/data
+      - seatunnel_logs:/opt/seatunnel/logs
     networks:
       integration:
-        ipv4_address: 172.199.0.11
+        ipv4_address: 172.199.0.50
 
   worker1:
-    #image: apache/seatunnel:2.3.9
-    build:
-      context: .
-      dockerfile: ./Dockerfile-seatunnel-kas
+    image: quay.io/larryloi/seatunnel-2.3.10-kas:latest
     hostname: seatunnel-worker-1
     container_name: seatunnel-worker-1
     environment:
       - TZ=Asia/Macau
-      - ST_DOCKER_MEMBER_LIST=172.199.0.11,172.199.0.12,172.199.0.13
+      - ST_DOCKER_MEMBER_LIST=172.199.0.50,172.199.0.51,172.199.0.52
       # - JAVA_CLASSPATH=/opt/seatunnel/lib:/opt/seatunnel/starter
         #- IJAVA_CLASSPATH=/opt/seatunnel/lib
       # - JAVA_CLASSPATH=/opt/seatunnel/lib:/opt/seatunnel/starter
@@ -53,24 +50,21 @@ services:
       - ./config:/opt/seatunnel/config
       - ./JOBS:/opt/seatunnel/JOBS
       - ./Makefile.ct:/opt/seatunnel/Makefile
-      # - ../st_src/lib:/opt/seatunnel/lib
-      # - ../st_src/starter:/opt/seatunnel/starter
+      - seatunnel_worker1_data:/opt/seatunnel/data
+      - seatunnel_logs:/opt/seatunnel/logs
     depends_on:
-      - master
+      - master1
     networks:
       integration:
-        ipv4_address: 172.199.0.12
+        ipv4_address: 172.199.0.51
 
   worker2:
-    # image: apache/seatunnel:2.3.9
-    build:
-      context: .
-      dockerfile: ./Dockerfile-seatunnel-kas
+    image: quay.io/larryloi/seatunnel-2.3.10-kas:latest
     hostname: seatunnel-worker-2
     container_name: seatunnel-worker-2
     environment:
       - TZ=Asia/Macau
-      - ST_DOCKER_MEMBER_LIST=172.199.0.11,172.199.0.12,172.199.0.13
+      - ST_DOCKER_MEMBER_LIST=172.199.0.50,172.199.0.51,172.199.0.52
       # - JAVA_CLASSPATH=/opt/seatunnel/lib:/opt/seatunnel/starter
         #- IJAVA_CLASSPATH=/opt/seatunnel/lib
         #- JAVA_CLASSPATH=/opt/seatunnel/lib
@@ -81,63 +75,55 @@ services:
     volumes:
       - ./config:/opt/seatunnel/config
       - ./JOBS:/opt/seatunnel/JOBS
-      - ./Makefile.ct:/opt/seatunnel/Makefile      
-      # - ../st_src/lib:/opt/seatunnel/lib
-      # - ../st_src/starter:/opt/seatunnel/starter
+      - ./Makefile.ct:/opt/seatunnel/Makefile
+      - seatunnel_worker2_data:/opt/seatunnel/data
+      - seatunnel_logs:/opt/seatunnel/logs
     depends_on:
-      - master
+      - master1
     networks:
       integration:
-        ipv4_address: 172.199.0.13
+        ipv4_address: 172.199.0.52
 
-#   mysql:
-#     build:
-#       context: ./mysql
-#     hostname: seatunnel-mysql
-#     container_name: seatunnel-mysql
-#     environment:
-#       MYSQL_ROOT_PASSWORD: '123456'
-#       MYSQL_DATABASE: seatunnel
-#     ports:
-#       - "3306:3306"
-#     volumes:
-#       - mysql_data:/var/lib/mysql
-#     networks:
-#       integration:
-#         ipv4_address: 172.199.0.20
+  mysql:
+    image: seatunnel-mysql:0.1.0
+    hostname: seatunnel-mysql
+    container_name: seatunnel-mysql
+    environment:
+      MYSQL_ROOT_PASSWORD: '123456'
+      MYSQL_DATABASE: seatunnel
+    ports:
+      - "3306:3306"
+    volumes:
+      - mysql_data:/var/lib/mysql
+    networks:
+      integration:
+        ipv4_address: 172.199.0.60
 
-#   web:
-#     build:
-#       context: ./seatunnel-web
-#     hostname: seatunnel-web
-#     container_name: seatunnel-web
-#     environment:
-#       - SEATUNNEL_MASTER_HOST=172.199.0.11
-#       - MYSQL_HOST=172.199.0.20
-#       - MYSQL_PORT=3306
-#       - MYSQL_DB=seatunnel
-#       - MYSQL_USER=root
-#       - MYSQL_PASSWORD=123456
-#     ports:
-#       - "8080:8080"
-#       - "8801:8801"
-#     networks:
-#       integration:
-#         ipv4_address: 172.199.0.21
-#     depends_on:
-#       - master
-#       - mysql
-#     volumes:
-#       - ./shared-connectors:/shared-connectors
-#       - ./seatunnel-web/application.yml:/app/conf/application.yml
+  web:
+    image: seatunnel-web:0.1.0
+    hostname: seatunnel-web
+    container_name: seatunnel-web
+    environment:
+      - SEATUNNEL_MASTER_HOST=172.199.0.50
+      - MYSQL_HOST=172.199.0.60
+      - MYSQL_PORT=3306
+      - MYSQL_DB=seatunnel
+      - MYSQL_USER=root
+      - MYSQL_PASSWORD=123456
+    ports:
+      - "8080:8080"
+      - "8801:8801"
+    networks:
+      integration:
+        ipv4_address: 172.199.0.61
+    depends_on:
+      - master1
+      - mysql
+    volumes:
+      - ./shared-connectors:/shared-connectors
+      - ./seatunnel-web/application.yml:/app/conf/application.yml
+      - ./seatunnel-web/hazelcast-client.yaml:/app/conf/hazelcast-client.yaml
 
-# networks:
-#   integration:
-#     driver: bridge
-#     ipam:
-#       config:
-#         - subnet: 172.199.0.0/24
-#           gateway: 172.199.0.1
 
 networks:
   integration:
@@ -146,3 +132,7 @@ networks:
 volumes:
   mysql_data:
   shared-connectors:
+  seatunnel_master1_data:
+  seatunnel_worker1_data:
+  seatunnel_worker2_data:
+  seatunnel_logs:
