--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,179 +1,1 @@
-
-
-services:
-  master1:
-    # image: apache/seatunnel:2.3.9
-    build:
-      context: .
-      dockerfile: ./Dockerfile-seatunnel-kas
-    hostname: seatunnel-master1
-    container_name: seatunnel-master1
-    environment:
-      - TZ=Asia/Macau
-      - ST_DOCKER_MEMBER_LIST=172.199.0.11:5701,172.199.0.12:5701,172.199.0.13,172.199.0.14
-      # - JAVA_CLASSPATH=/opt/seatunnel/lib:/opt/seatunnel/starter
-        #- IJAVA_CLASSPATH=/opt/seatunnel/lib
-      #- JAVA_CLASSPATH=/opt/seatunnel/lib
-    entrypoint: >
-      /bin/sh -c "
-      /opt/seatunnel/bin/seatunnel-cluster.sh -r master
-      "    
-    ports:
-      - "5701:5701"
-    volumes:
-      - ./config:/opt/seatunnel/config
-        #- ../st_src/lib:/opt/seatunnel/lib
-        #- ../st_src/shared-connectors:/shared-connectors
-      - ./JOBS:/opt/seatunnel/JOBS
-      - ./Makefile.ct:/opt/seatunnel/Makefile
-      # - ../st_src/starter:/opt/seatunnel/starter
-      # - ./job_run.sh:/opt/seatunnel/job_run.sh
-    networks:
-      integration:
-        ipv4_address: 172.199.0.11
-
-  master2:
-    # image: apache/seatunnel:2.3.9
-    build:
-      context: .
-      dockerfile: ./Dockerfile-seatunnel-kas
-    hostname: seatunnel-master2
-    container_name: seatunnel-master2
-    environment:
-      - TZ=Asia/Macau
-      - ST_DOCKER_MEMBER_LIST=172.199.0.11:5701,172.199.0.12:5701,172.199.0.13,172.199.0.14
-      # - JAVA_CLASSPATH=/opt/seatunnel/lib:/opt/seatunnel/starter
-        #- IJAVA_CLASSPATH=/opt/seatunnel/lib
-      #- JAVA_CLASSPATH=/opt/seatunnel/lib
-    entrypoint: >
-      /bin/sh -c "
-      /opt/seatunnel/bin/seatunnel-cluster.sh -r master
-      "    
-    ports:
-      - "5702:5701"
-    volumes:
-      - ./config:/opt/seatunnel/config
-        #- ../st_src/lib:/opt/seatunnel/lib
-        #- ../st_src/shared-connectors:/shared-connectors
-      - ./JOBS:/opt/seatunnel/JOBS
-      - ./Makefile.ct:/opt/seatunnel/Makefile
-      # - ../st_src/starter:/opt/seatunnel/starter
-      # - ./job_run.sh:/opt/seatunnel/job_run.sh
-    networks:
-      integration:
-        ipv4_address: 172.199.0.12
-
-  worker1:
-    #image: apache/seatunnel:2.3.9
-    build:
-      context: .
-      dockerfile: ./Dockerfile-seatunnel-kas
-    hostname: seatunnel-worker-1
-    container_name: seatunnel-worker-1
-    environment:
-      - TZ=Asia/Macau
-      - ST_DOCKER_MEMBER_LIST=172.199.0.11:5701,172.199.0.12:5701,172.199.0.13,172.199.0.14
-      # - JAVA_CLASSPATH=/opt/seatunnel/lib:/opt/seatunnel/starter
-        #- IJAVA_CLASSPATH=/opt/seatunnel/lib
-      # - JAVA_CLASSPATH=/opt/seatunnel/lib:/opt/seatunnel/starter
-    entrypoint: >
-      /bin/sh -c "
-      /opt/seatunnel/bin/seatunnel-cluster.sh -r worker
-      " 
-    volumes:
-      - ./config:/opt/seatunnel/config
-      - ./JOBS:/opt/seatunnel/JOBS
-      - ./Makefile.ct:/opt/seatunnel/Makefile
-      # - ../st_src/lib:/opt/seatunnel/lib
-      # - ../st_src/starter:/opt/seatunnel/starter
-    depends_on:
-      - master1
-    networks:
-      integration:
-        ipv4_address: 172.199.0.13
-
-  worker2:
-    # image: apache/seatunnel:2.3.9
-    build:
-      context: .
-      dockerfile: ./Dockerfile-seatunnel-kas
-    hostname: seatunnel-worker-2
-    container_name: seatunnel-worker-2
-    environment:
-      - TZ=Asia/Macau
-      - ST_DOCKER_MEMBER_LIST=172.199.0.11:5701,172.199.0.12:5701,172.199.0.13,172.199.0.14
-      # - JAVA_CLASSPATH=/opt/seatunnel/lib:/opt/seatunnel/starter
-        #- IJAVA_CLASSPATH=/opt/seatunnel/lib
-        #- JAVA_CLASSPATH=/opt/seatunnel/lib
-    entrypoint: >
-      /bin/sh -c "
-      /opt/seatunnel/bin/seatunnel-cluster.sh -r worker 
-      " 
-    volumes:
-      - ./config:/opt/seatunnel/config
-      - ./JOBS:/opt/seatunnel/JOBS
-      - ./Makefile.ct:/opt/seatunnel/Makefile      
-      # - ../st_src/lib:/opt/seatunnel/lib
-      # - ../st_src/starter:/opt/seatunnel/starter
-    depends_on:
-      - master1
-    networks:
-      integration:
-        ipv4_address: 172.199.0.14
-
-#   mysql:
-#     build:
-#       context: ./mysql
-#     hostname: seatunnel-mysql
-#     container_name: seatunnel-mysql
-#     environment:
-#       MYSQL_ROOT_PASSWORD: '123456'
-#       MYSQL_DATABASE: seatunnel
-#     ports:
-#       - "3306:3306"
-#     volumes:
-#       - mysql_data:/var/lib/mysql
-#     networks:
-#       integration:
-#         ipv4_address: 172.199.0.20
-
-#   web:
-#     build:
-#       context: ./seatunnel-web
-#     hostname: seatunnel-web
-#     container_name: seatunnel-web
-#     environment:
-#       - SEATUNNEL_MASTER_HOST=172.199.0.11
-#       - MYSQL_HOST=172.199.0.20
-#       - MYSQL_PORT=3306
-#       - MYSQL_DB=seatunnel
-#       - MYSQL_USER=root
-#       - MYSQL_PASSWORD=123456
-#     ports:
-#       - "8080:8080"
-#       - "8801:8801"
-#     networks:
-#       integration:
-#         ipv4_address: 172.199.0.21
-#     depends_on:
-#       - master
-#       - mysql
-#     volumes:
-#       - ./shared-connectors:/shared-connectors
-#       - ./seatunnel-web/application.yml:/app/conf/application.yml
-
-# networks:
-#   integration:
-#     driver: bridge
-#     ipam:
-#       config:
-#         - subnet: 172.199.0.0/24
-#           gateway: 172.199.0.1
-
-networks:
-  integration:
-    external: true
-
-volumes:
-  mysql_data:
-  shared-connectors:
+docker-compose.1m2w.yaml
