--- a/seatunnel-web/application.yml
+++ b/seatunnel-web/application.yml
@@ -4,7 +4,7 @@ server:
 
 seatunnel:
   server:
-    host: seatunnel-master  # Service name from Docker Compose
+    host: seatunnel-master1  # Service name from Docker Compose
     port: 5701       # Adjust if the seatunnel server uses a different port
 #   engine:
 #     http:
@@ -18,7 +18,7 @@ spring:
   application:
     name: seatunnel-web
   datasource:
-    url: 'jdbc:mysql://mysql:3306/seatunnel?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC'
+    url: jdbc:mysql://seatunnel-mysql:3306/seatunnel?useSSL=false&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&allowPublicKeyRetrieval=true
     username: root
     password: "123456"
     driver-class-name: com.mysql.cj.jdbc.Driver
