added sqlserver use cases;

--- a/JOBS/test/mysql_cdc_multi_table_sink.conf
+++ b/JOBS/test/mysql_cdc_multi_table_sink.conf
@@ -20,7 +20,7 @@
 
 env {
   # You can set engine configuration here
-  job.name = "multi_mysql_cdc_mysql"
+  job.name = "mysql_cdc_multi_table_sink"
   parallelism = 3
   job.mode = "STREAMING"
   checkpoint.interval = 5000
@@ -29,10 +29,11 @@ source {
   MySQL-CDC {
     plugin_output = "customers_mysql_cdc"
     server-id = 5652-5660
+    base-url = "jdbc:mysql://10.2.2.209:3306/inventory"
     username = "seatunnel_src"
     password = "Abcd1234"
     table-names = ["inventory.abc", "inventory.xyz"]
-    base-url = "jdbc:mysql://10.2.2.209:3306/inventory"
+
     snapshot.split.size = 1
     table-name-config = [
         {
@@ -58,8 +59,8 @@ transform {
 sink {
   jdbc {
     plugin_input = "customers_mysql_cdc"
-    url = "jdbc:mysql://10.2.2.209:3306/dwh"
     driver = "com.mysql.cj.jdbc.Driver"
+    url = "jdbc:mysql://10.2.2.209:3306/dwh"
     user = "seatunnel_sink"
     password = "Abcd1234"
 
