--- a/config/hazelcast-client.yaml
+++ b/config/hazelcast-client.yaml
@@ -16,7 +16,7 @@
 #
 
 hazelcast-client:
-  cluster-name: seatunnel
+  cluster-name: seatunnel-test-lab
   properties:
     hazelcast.logging.type: log4j2
   connection-strategy:
@@ -24,4 +24,4 @@ hazelcast-client:
       cluster-connect-timeout-millis: 3000
   network:
     cluster-members:
-      - 172.19.0.50-70
+      - 172.19.0.50-52
