--- a/config/hazelcast-master.yaml
+++ b/config/hazelcast-master.yaml
@@ -16,7 +16,7 @@
 #
 
 hazelcast:
-  cluster-name: seatunnel
+  cluster-name: seatunnel-test-lab
   network:
     rest-api:
       enabled: true
@@ -29,7 +29,7 @@ hazelcast:
       tcp-ip:
         enabled: true
         member-list:
-          - 172.19.0.50-70
+          - 172.19.0.50-52
 #     port:
 #       auto-increment: false
 #       port: 5801
