--- a/config/log4j2.properties
+++ b/config/log4j2.properties
@@ -16,7 +16,7 @@
 # limitations under the License.
 ################################################################################
 
-rootLogger.level = INFO
+rootLogger.level = NONE
 rootLogger.appenderRefs = consoleStdout, consoleStderr
 
 rootLogger.appenderRef.consoleStdout.ref = consoleStdoutAppender
