--- a/config/log4j2_client.properties
+++ b/config/log4j2_client.properties
@@ -25,7 +25,7 @@ property.file_split_size = 100MB
 property.file_count = 100
 property.file_ttl = 7d
 
-rootLogger.level = ERROR
+rootLogger.level = DEBUG
 rootLogger.appenderRefs = consoleStdoutAppender,consoleStderrAppender
 
 ############################ log output to console #############################
