--- a/config/seatunnel.yaml
+++ b/config/seatunnel.yaml
@@ -31,9 +31,15 @@ seatunnel:
         type: hdfs
         max-retained: 3
         plugin-config:
-          namespace: /tmp/seatunnel/checkpoint_snapshot
+          namespace: /opt/seatunnel/data/checkpoint_snapshot
+          # namespace: /tmp/seatunnel/checkpoint_snapshot
           storage.type: hdfs
-          fs.defaultFS: file:///tmp/ # Ensure that the directory has written permission
+          #fs.defaultFS: file:///tmp/ # Ensure that the directory has written permission
+          fs.defaultFS: file:/opt/seatunnel/data
     telemetry:
       metric:
         enabled: false
+    http:
+      enable-http: true
+      port: 8080
+      context-path: /seatunnel
