--- a/docker-compose.1m2w.yaml
+++ b/docker-compose.1m2w.yaml
@@ -11,6 +11,10 @@ services:
     environment:
       - TZ=Asia/Macau
       - ST_DOCKER_MEMBER_LIST=172.199.0.50,172.199.0.51,172.199.0.52
+      - SRC_DB_USER=seatunnel_src
+      - SRC_DB_PASSWORD=Abcd1234
+      - SINK_DB_USER=seatunnel_sink
+      - SINK_DB_PASSWORD=Abcd1234
       # - JAVA_CLASSPATH=/opt/seatunnel/lib:/opt/seatunnel/starter
         #- IJAVA_CLASSPATH=/opt/seatunnel/lib
       #- JAVA_CLASSPATH=/opt/seatunnel/lib
@@ -19,7 +23,7 @@ services:
       /opt/seatunnel/bin/seatunnel-cluster.sh -r master
       "    
     ports:
-      - "5701:5701"
+      - "5801:5801"
     volumes:
       - ./config:/opt/seatunnel/config
         #- ../st_src/lib:/opt/seatunnel/lib
@@ -39,6 +43,7 @@ services:
     environment:
       - TZ=Asia/Macau
       - ST_DOCKER_MEMBER_LIST=172.199.0.50,172.199.0.51,172.199.0.52
+
       # - JAVA_CLASSPATH=/opt/seatunnel/lib:/opt/seatunnel/starter
         #- IJAVA_CLASSPATH=/opt/seatunnel/lib
       # - JAVA_CLASSPATH=/opt/seatunnel/lib:/opt/seatunnel/starter
