--- a/seatunnel-web/hazelcast-client.yaml
+++ b/seatunnel-web/hazelcast-client.yaml
@@ -16,7 +16,7 @@
 #
 
 hazelcast-client:
-  cluster-name: seatunnel
+  cluster-name: seatunnel-test-lab
   properties:
     hazelcast.logging.type: log4j2
   connection-strategy:
