added sqlserver to kafka to sqlserver cases

--- a/JOBS/kafka_mysql/ST_pipeline_01_src_sink.conf
+++ b/JOBS/kafka_mysql/ST_pipeline_01_src_sink.conf
@@ -3,6 +3,8 @@ env {
   parallelism = 3
   job.mode = "STREAMING"
   checkpoint.interval = 10000
+  job.retry.times = 3
+  job.retry.interval.seconds = 10
   logging.level = "DEBUG"
 }
 
