--- a/JOBS/mysql_kafka_mysql/mysql_cdc_to_kafka.conf
+++ b/JOBS/mysql_kafka_mysql/mysql_cdc_to_kafka.conf
@@ -3,6 +3,8 @@ env {
   parallelism = 5
   job.mode = "STREAMING"
   checkpoint.interval = 5000
+  job.retry.times = 3
+  job.retry.interval.seconds = 10
   read_limit.bytes_per_second=7000000
   read_limit.rows_per_second=400
 }
@@ -13,7 +15,7 @@ source {
     username = "seatunnel_src"
     password = "Abcd1234"
     table-names = ["inventory01.orders","inventory02.orders"]
-    base-url = "jdbc:mysql://192.168.138.16:3306/inventory01"
+    base-url = "jdbc:mysql://db01.kaskade.local:3306/inventory01"
     
     schema-changes.enabled = true
   }
