--- a/JOBS/mysql_mysql/mysql_cdc_to_mysql.conf
+++ b/JOBS/mysql_mysql/mysql_cdc_to_mysql.conf
@@ -3,6 +3,8 @@ env {
   parallelism = 5
   job.mode = "STREAMING"
   checkpoint.interval = 5000
+  job.retry.times = 3
+  job.retry.interval.seconds = 10
   read_limit.bytes_per_second=7000000
   read_limit.rows_per_second=400
 }
