--- a/JOBS/sqlserver_kafka_sqlserver/sqlserver_cdc__2t_2t_src.conf
+++ b/JOBS/sqlserver_kafka_sqlserver/sqlserver_cdc__2t_2t_src.conf
@@ -1,29 +1,26 @@
+### https://seatunnel.apache.org/docs/2.3.10/connector-v2/formats/cdc-compatible-debezium-json/
+
 env {
   job.name = "sqlserver_cdc__2t_2t_src"
   parallelism = 1
   job.mode = "STREAMING"
   checkpoint.interval = 5000
+  job.retry.times = 3
+  job.retry.interval.seconds = 10
+  read_limit.bytes_per_second=7000000
+  read_limit.rows_per_second=400
 }
 
 source {
   SqlServer-CDC {
-    plugin_output = "sqlserver_cdc__1t_1t_src"
+    plugin_output = "sqlserver_cdc__2t_2t_src"
     base-url = "jdbc:sqlserver://db01.kaskade.local:1433;databaseName=company;encrypt=false"
     username = ${SRC_DB_USER}
     password = ${SRC_DB_PASSWORD}
 
     database-names = ["company"]
     table-names = ["company.dbo.emps","company.dbo.depts"]
-    table-names-config = [
-      {
-        table = "company.dbo.emps"
-        primaryKeys = ["id"]
-      }
-      {
-        table = "company.dbo.depts"
-        primaryKeys = ["id"]
-      }
-    ]
+
     startup.mode="initial"
     exactly_once = true
     format = compatible_debezium_json
@@ -32,18 +29,16 @@ source {
     key.converter.schemas.enable = false
     value.converter.schemas.enable = false
     # topic prefix
-    database.server.name = "sqlserver_cdc__1t_1t_src"
+    database.server.name = "sqlserver_cdc__2t_2t_src"
     } 
   }
 }
 
 
-
-
 sink {
 
   kafka {
-      plugin_input = "sqlserver_cdc__1t_1t_src"
+      plugin_input = "sqlserver_cdc__2t_2t_src"
       topic = "sqlserver_cdc__2t_2t_src${topic}"
       bootstrap.servers = "172.199.0.3:29092"
       format = compatible_debezium_json
