--- a/JOBS/sqlserver_kafka_sqlserver/sqlserver_cdc__2t_2t_src_sink_01.conf
+++ b/JOBS/sqlserver_kafka_sqlserver/sqlserver_cdc__2t_2t_src_sink_01.conf
@@ -1,20 +1,24 @@
 env {
-  job.name = "sqlserver_cdc__2t_2t_sink"
+  job.name = "sqlserver_cdc__2t_2t_src_sink_01"
   parallelism = 1
   job.mode = "STREAMING"
-  checkpoint.interval = 10000
+  checkpoint.interval = 5000
+  job.retry.times = 3
+  job.retry.interval.seconds = 10
+  read_limit.bytes_per_second=7000000
+  read_limit.rows_per_second=400
   logging.level = "DEBUG"
 }
 
 source {
   Kafka {
     plugin_output = "emps_source"
-    bootstrap.servers = "172.199.0.3:29092"
-    topic = "emps_source"
-    consumer.group = "sqlserver_cdc__2t_2t_sink_emps_source"
+    bootstrap.servers = "10.2.2.231:29092"
+    topic = "sqlserver_cdc__2t_2t_src.dbo.emps"
+    consumer.group = "sqlserver_cdc__2t_2t_src_sink_01_emps"
     format = "debezium_json"
     debezium_record_include_schema = false
-    start_mode = latest
+    start_mode = earliest
     kafka.config = {
       auto.offset.reset = "latest"
       enable.auto.commit = "true"
@@ -25,22 +29,22 @@ source {
     schema = {
       fields {
           id = "int"
-          depts = "int"
+          dept_id = "int"
           first_name = "string"
           last_name = "string"
-          hire_date = "int"
+          hired_at = "timestamp"
       }
     }
   }
 
   Kafka {
     plugin_output = "depts_source"
-    bootstrap.servers = "172.199.0.3:29092"
-    topic = "depts_source"
-    consumer.group = "sqlserver_cdc__2t_2t_sink_depts_source"
+    bootstrap.servers = "10.2.2.231:29092"
+    topic = "sqlserver_cdc__2t_2t_src.dbo.depts"
+    consumer.group = "sqlserver_cdc__2t_2t_src_sink_01_depts"
     format = "debezium_json"
     debezium_record_include_schema = false
-    start_mode = latest
+    start_mode = earliest
     kafka.config = {
       auto.offset.reset = "latest"
       enable.auto.commit = "true"
@@ -54,10 +58,12 @@ source {
           name = "string"
       }
     }
-
   }
 
 }
+
+
+
 
 
 sink {
@@ -70,7 +76,7 @@ sink {
     password = ${SINK_DB_PASSWORD}
     generate_sink_sql = true
     database = "dwh"
-    table = "DW_ETL.emps_kafka_sink01"
+    table = "DW_ETL.emps_sink_01"
     primary_keys = ["id"]
     schema_save_mode = "CREATE_SCHEMA_WHEN_NOT_EXIST"
     enable_upsert = true
@@ -86,12 +92,16 @@ sink {
     password = ${SINK_DB_PASSWORD}
     generate_sink_sql = true
     database = "dwh"
-    table = "DW_ETL.depts_kafka_sink01"
+    table = "DW_ETL.depts_sink_01"
     primary_keys = ["id"]
     schema_save_mode = "CREATE_SCHEMA_WHEN_NOT_EXIST"
     enable_upsert = true
     max_retries = 3
     batch_size = 2000
+  }
+
+  Console {
+    plugin_input = "emps_source"
   }
 
 }
