--- a/JOBS/test/mysql_cdc_table_pattern_all_tables.conf
+++ b/JOBS/test/mysql_cdc_table_pattern_all_tables.conf
@@ -1,7 +1,7 @@
 
 env {
   # You can set engine configuration here
-  job.name = "mysql_cdc_table_pattern2"
+  job.name = "mysql_cdc_table_pattern1"
   parallelism = 1
   job.mode = "STREAMING"
   checkpoint.interval = 5000
@@ -15,16 +15,12 @@ source {
   MySQL-CDC {
     
     server-id = 5652-5660
-    base-url = "jdbc:mysql://10.2.2.209:3306/my_com"
+    base-url = "jdbc:mysql://10.2.2.209:3306/inventory"
     username = "seatunnel_src"
     password = "Abcd1234"
 
-    database-names = ["my_com"]
-    table-pattern = "my_com\\.my.*"
-    table-names-config = [
-        {"table":"my_com.my_depts","primaryKeys":["id"]}
-        {"table":"my_com.my_emps","primaryKeys":["id"]}
-        ]
+    database-names = ["inventory"]
+    table-pattern = "inventory\\..*"
 
     startup.mode = "initial" 
     snapshot.split.size = 1
@@ -37,7 +33,6 @@ source {
     schema-changes.enabled = true
   }
 
-  
 }
 
 transform {
@@ -55,7 +50,7 @@ sink {
     schema_save_mode = "CREATE_SCHEMA_WHEN_NOT_EXIST"
     data_save_mode = "APPEND_DATA"
 
-    database = "dwh"
+    database = "dwh01"
     table = "${table_name}"
     primary_keys = ["${primary_key}"]
     
