--- a/JOBS/test/mysql_kafka_src.conf
+++ b/JOBS/test/mysql_kafka_src.conf
@@ -3,10 +3,13 @@ env {
   job.name = "InventoryKafkaSink_MySQL_CDC_src"
   parallelism = 1
   job.mode = "STREAMING"
-  checkpoint.interval = 10000
-  logging.level = "ERROR"
+  checkpoint.interval = 5000
+  job.retry.times = 3
+  job.retry.interval.seconds = 10
   read_limit.bytes_per_second=7000000
   read_limit.rows_per_second=400
+  logging.level = "ERROR"
+
 }
 
 source {
