--- a/JOBS/test/mysql_kafka_src_sink_1.conf
+++ b/JOBS/test/mysql_kafka_src_sink_1.conf
@@ -2,7 +2,11 @@ env {
   job.name = "InventoryKafkaSink"
   parallelism = 3
   job.mode = "STREAMING"
-  checkpoint.interval = 10000
+  checkpoint.interval = 5000
+  job.retry.times = 3
+  job.retry.interval.seconds = 10
+  read_limit.bytes_per_second=7000000
+  read_limit.rows_per_second=400
   logging.level = "ERROR"
 }
 
