--- a/JOBS/kafka_mysql/ST_pipeline_00_src.conf
+++ b/JOBS/kafka_mysql/ST_pipeline_00_src.conf
@@ -4,6 +4,8 @@ env {
   parallelism = 1
   job.mode = "STREAMING"
   checkpoint.interval = 10000
+  job.retry.times = 3
+  job.retry.interval.seconds = 10
   logging.level = "DEBUG"
 }
 
