--- a/JOBS/kafka_mysql/mysql2kafka2.conf
+++ b/JOBS/kafka_mysql/mysql2kafka2.conf
@@ -2,6 +2,8 @@ env {
   parallelism = 1
   job.mode = "STREAMING"
   checkpoint.interval = 10000
+  job.retry.times = 3
+  job.retry.interval.seconds = 10
 }
 
 source {
