--- a/JOBS/kafka_starrocks/mysql_inventory_cp_json_DebeziumSrc02_my_orders__ODS.conf
+++ b/JOBS/kafka_starrocks/mysql_inventory_cp_json_DebeziumSrc02_my_orders__ODS.conf
@@ -3,6 +3,8 @@ env {
   parallelism = 2
   job.mode = "STREAMING"
   checkpoint.interval = 5000
+  job.retry.times = 3
+  job.retry.interval.seconds = 10
 }
 
 
