--- a/JOBS/mysql_mysql/inventory.myorders__DWH.conf
+++ b/JOBS/mysql_mysql/inventory.myorders__DWH.conf
@@ -1,7 +1,11 @@
 env {
   parallelism = 1
   job.mode = "STREAMING"
-  checkpoint.interval = 10000
+  checkpoint.interval = 5000
+  job.retry.times = 3
+  job.retry.interval.seconds = 10
+  read_limit.bytes_per_second=7000000
+  read_limit.rows_per_second=400
 }
 
 source {
