--- a/JOBS/sqlserver_kafka_sqlserver/sqlserver_cdc__2t_2t_src_02.conf
+++ b/JOBS/sqlserver_kafka_sqlserver/sqlserver_cdc__2t_2t_src_02.conf
@@ -1,5 +1,7 @@
+### https://seatunnel.apache.org/docs/2.3.10/connector-v2/formats/cdc-compatible-debezium-json/
+
 env {
-  job.name = "sqlserver_cdc__1t_1t_src"
+  job.name = "sqlserver_cdc__2t_2t_src_02"
   parallelism = 1
   job.mode = "STREAMING"
   checkpoint.interval = 5000
@@ -11,16 +13,20 @@ env {
 
 source {
   SqlServer-CDC {
-    plugin_output = "emps_source"
+    plugin_output = "sqlserver_cdc__2t_2t_src_02"
     base-url = "jdbc:sqlserver://db01.kaskade.local:1433;databaseName=company;encrypt=false"
     username = ${SRC_DB_USER}
     password = ${SRC_DB_PASSWORD}
 
     database-names = ["company"]
-    table-names = ["company.dbo.emps"]
+    table-names = ["company.dbo.emps","company.dbo.depts"]
     table-names-config = [
       {
         table = "company.dbo.emps"
+        primaryKeys = ["id"]
+      }
+      {
+        table = "company.dbo.depts"
         primaryKeys = ["id"]
       }
     ]
@@ -32,22 +38,17 @@ source {
     key.converter.schemas.enable = false
     value.converter.schemas.enable = false
     # topic prefix
-    database.server.name = "db01.kaskade.local"
-    }
+    database.server.name = "sqlserver_cdc__2t_2t_src_02"
+    } 
   }
 }
-
-#transform {
-#  }
-#}
-
 
 
 sink {
 
   kafka {
-      plugin_input = "emps_transform"
-      topic = "sqlserver_cdc__1t_1t"
+      plugin_input = "sqlserver_cdc__2t_2t_src_02"
+      topic = "sqlserver_cdc__2t_2t_src_02${topic}"
       bootstrap.servers = "172.199.0.3:29092"
       format = compatible_debezium_json
       kafka.request.timeout.ms = 60000
@@ -60,5 +61,6 @@ sink {
         batch.size = 500
       }
   }
+
 
 }
