--- a/JOBS/stress_test/ST_pipeline_00_src.conf
+++ b/JOBS/stress_test/ST_pipeline_00_src.conf
@@ -3,10 +3,13 @@ env {
   job.name = "ST_pipeline_00_src"
   parallelism = 1
   job.mode = "STREAMING"
-  checkpoint.interval = 10000
-  logging.level = "DEBUG"
+  checkpoint.interval = 5000
+  job.retry.times = 3
+  job.retry.interval.seconds = 10
   read_limit.bytes_per_second=7000000
   read_limit.rows_per_second=400
+  logging.level = "DEBUG"
+
 }
 
 source {
