--- a/JOBS/test/mysql_cdc_multi_table_sink_var.conf
+++ b/JOBS/test/mysql_cdc_multi_table_sink_var.conf
@@ -24,6 +24,10 @@ env {
   parallelism = 3
   job.mode = "STREAMING"
   checkpoint.interval = 5000
+  job.retry.times = 3
+  job.retry.interval.seconds = 10
+  read_limit.bytes_per_second=7000000
+  read_limit.rows_per_second=400
 }
 
 source {
