added some test cases

--- a/config/hazelcast-client copy.yaml
+++ b/config/hazelcast-client copy.yaml
@@ -15,33 +15,13 @@
 # limitations under the License.
 #
 
-hazelcast:
+hazelcast-client:
   cluster-name: seatunnel-test-lab
-  network:
-    rest-api:
-      enabled: true
-      endpoint-groups:
-        CLUSTER_WRITE:
-          enabled: true
-        DATA:
-          enabled: true
-    join:
-      tcp-ip:
-        enabled: true
-        member-list:
-          - 172.19.0.50
-#     port:
-#       auto-increment: false
-#       port: 5801
   properties:
-    hazelcast.invocation.max.retry.count: 20
-    hazelcast.tcp.join.port.try.count: 30
     hazelcast.logging.type: log4j2
-    hazelcast.operation.generic.thread.count: 50
-    hazelcast.heartbeat.failuredetector.type: phi-accrual
-    hazelcast.heartbeat.interval.seconds: 2
-    hazelcast.max.no.heartbeat.seconds: 180
-    hazelcast.heartbeat.phiaccrual.failuredetector.threshold: 10
-    hazelcast.heartbeat.phiaccrual.failuredetector.sample.size: 200
-    hazelcast.heartbeat.phiaccrual.failuredetector.min.std.dev.millis: 100
-
+  connection-strategy:
+    connection-retry:
+      cluster-connect-timeout-millis: 3000
+  network:
+    cluster-members:
+      - 172.19.0.50-52
